--- a/package.json
+++ b/package.json
@@ -17,14 +17,30 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "glamor": "^2.20.40",
+    "glamorous": "^4.9.7",
+    "ramda": "^0.25.0"
+  },
   "peerDependencies": {
-    "react": "15.x"
+    "react": "16.x",
+    "recompose": "^0.26.0"
   },
   "devDependencies": {
-    "nwb": "0.19.x",
+    "@types/expect": "^1.20.2",
+    "@types/mocha": "^2.2.43",
+    "@types/ramda": "^0.24.16",
+    "@types/react": "^16.0.10",
+    "@types/react-dom": "^16.0.1",
+    "@types/recompose": "^0.24.2",
+    "@types/webpack": "^3.0.13",
+    "awesome-typescript-loader": "^3.2.3",
+    "expect": "^21.2.1",
+    "nwb": "^0.19.0",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "recompose": "^0.26.0",
+    "typescript": "^2.5.3"
   },
   "author": "",
   "homepage": "",
