--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.12.0",
     "recompose": "^0.30.0",
+    "tslint": "^6.1.3",
+    "tslint-react": "^5.0.0",
     "typescript": "^3.8.2"
   },
   "author": "Michael Kruglos",
